[package]
name = "subfix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
camino = "1.1.4"
log = "0.4.17"
once_cell = "1.17.1"
regex = "1.8.1"
walkdir = "2.3.3"

[dependencies.env_logger]
version = "0.10"
default-features = false
features = ["auto-color"]
