[package]
name = "subfix"
description = "Creates symlinks to help Jellyfin find all your subtitles"
categories = ["command-line-utilities"]
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://codeberg.org/alpha-tango-kilo/subfix"
repository = "https://codeberg.org/alpha-tango-kilo/subfix"
publish = false

[dependencies]
anyhow = "1.0.70"
camino = "1.1.4"
isolang = "2.2.0"
log = "0.4.17"
once_cell = "1.17.1"
regex = "1.8.1"
walkdir = "2.3.3"

[dependencies.env_logger]
version = "0.10"
default-features = false
features = ["auto-color"]

[profile.release]
lto = true
